SignIn handler add
